trunk/Archive2/07/296f09daf6711e/output
In file included from /usr/local/include/boost/phoenix/bind/bind_member_variable.hpp:13:0,
                 from /usr/local/include/boost/phoenix/bind.hpp:14,
                 from /usr/local/include/boost/phoenix/phoenix.hpp:17,
                 from /usr/local/include/boost/phoenix.hpp:11,
                 from /usr/local/include/boost/spirit/include/phoenix.hpp:11,
                 from main.cpp:6:
/usr/local/include/boost/phoenix/bind/detail/member_variable.hpp: In instantiation of 'struct boost::phoenix::detail::member_variable<std::basic_string<char>() const, std::basic_string<char> (foo::*)() const>':
/usr/local/include/boost/proto/make_expr.hpp:77:16:   required from 'struct boost::proto::detail::protoify<boost::phoenix::detail::member_variable<std::basic_string<char>() const, std::basic_string<char> (foo::*)() const>, boost::proto::domainns_::basic_default_domain>'
/usr/local/include/boost/proto/detail/preprocessed/make_expr_.hpp:70:9:   required from 'struct boost::proto::detail::make_expr_<boost::phoenix::detail::tag::function_eval, boost::proto::domainns_::basic_default_domain, boost::phoenix::detail::member_variable<std::basic_string<char>() const, std::basic_string<char> (foo::*)() const>, boost::phoenix::actor<boost::spirit::attribute<0> >, void, void, void, void, void, void, void, void, void>'
/usr/local/include/boost/proto/make_expr.hpp:185:13:   required from 'struct boost::proto::result_of::make_expr<boost::phoenix::detail::tag::function_eval, boost::proto::domainns_::basic_default_domain, boost::phoenix::detail::member_variable<std::basic_string<char>() const, std::basic_string<char> (foo::*)() const>, boost::phoenix::actor<boost::spirit::attribute<0> >, void, void, void, void, void, void, void, void, void>'
/usr/local/include/boost/phoenix/core/preprocessed/expression_10.hpp:85:13:   required from 'struct boost::phoenix::expr_ext<boost::phoenix::actor, boost::phoenix::detail::tag::function_eval, boost::phoenix::detail::member_variable<std::basic_string<char>() const, std::basic_string<char> (foo::*)() const>, boost::phoenix::actor<boost::spirit::attribute<0> >, void, void, void, void, void, void, void, void, void>'
/usr/local/include/boost/phoenix/core/preprocessed/expression_10.hpp:24:12:   required from 'struct boost::phoenix::expr<boost::phoenix::detail::tag::function_eval, boost::phoenix::detail::member_variable<std::basic_string<char>() const, std::basic_string<char> (foo::*)() const>, boost::phoenix::actor<boost::spirit::attribute<0> >, void, void, void, void, void, void, void, void, void>'
/usr/local/include/boost/phoenix/core/detail/preprocessed/function_eval_10.hpp:7:561:   required from 'struct boost::phoenix::detail::expression::function_eval<boost::phoenix::detail::member_variable<std::basic_string<char>() const, std::basic_string<char> (foo::*)() const>, boost::phoenix::actor<boost::spirit::attribute<0> >, void, void, void, void, void, void, void, void, void>'
/usr/local/include/boost/phoenix/bind/bind_member_variable.hpp:24:5:   required by substitution of 'template<class RT, class ClassT, class ClassA> const typename boost::phoenix::detail::expression::function_eval<boost::phoenix::detail::member_variable<RT, RT ClassT::*>, ClassA>::type boost::phoenix::bind(RT ClassT::*, const ClassA&) [with RT = std::basic_string<char>() const; ClassT = foo; ClassA = boost::phoenix::actor<boost::spirit::attribute<0> >]'
main.cpp:35:107:   required from here
/usr/local/include/boost/phoenix/bind/detail/member_variable.hpp:50:17: error: forming reference to qualified function type 'std::basic_string<char>() const'
             RT& operator()(Class& obj) const
                 ^
/usr/local/include/boost/phoenix/bind/detail/member_variable.hpp:59:17: error: forming reference to qualified function type 'std::basic_string<char>() const'
             RT& operator()(Class* obj) const
                 ^
/usr/local/include/boost/phoenix/bind/detail/member_variable.hpp:65:23: error: forming reference to qualified function type 'std::basic_string<char>() const'
             RT const& operator()(Class const& obj) const
                       ^
/usr/local/include/boost/phoenix/bind/detail/member_variable.hpp:74:23: error: forming reference to qualified function type 'std::basic_string<char>() const'
             RT const& operator()(Class const* obj) const
                       ^
